--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.byaoh.cloud</groupId>
-        <artifactId>spring-cloud-alibaba-learning-parent</artifactId>
-        <version>0.0.23</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xmlns="http://maven.apache.org/POM/4.0.0"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.byaoh.cloud</groupId>
+		<artifactId>spring-cloud-alibaba-learning-parent</artifactId>
+		<version>0.0.23</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
 
-    <artifactId>spring-cloud-alibaba-learning-common</artifactId>
-    <version>0.0.1</version>
+	<artifactId>spring-cloud-alibaba-learning-common</artifactId>
+	<version>0.0.1</version>
 
-    <properties>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
-    </properties>
+	<properties>
+		<maven.compiler.source>8</maven.compiler.source>
+		<maven.compiler.target>8</maven.compiler.target>
+	</properties>
+
+	<dependencies>
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+	</dependencies>
 
 </project>
