--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>com.byaoh.cloud</groupId>
 		<artifactId>spring-cloud-alibaba-learning-parent</artifactId>
-		<version>0.0.23</version>
+		<version>0.0.25</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<artifactId>spring-cloud-alibaba-learning-common</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.02</version>
 
 	<properties>
 		<maven.compiler.source>8</maven.compiler.source>
@@ -26,6 +26,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
 		</dependency>
 	</dependencies>
 
