--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>com.byaoh.cloud</groupId>
 		<artifactId>spring-cloud-alibaba-learning-parent</artifactId>
-		<version>0.0.28</version>
+		<version>0.0.29</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<packaging>jar</packaging>
 	<artifactId>spring-cloud-alibaba-learning-common</artifactId>
-	<version>${common-version}</version>
+	<version>0.0.04</version>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
@@ -21,6 +21,16 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>cn.hutool</groupId>
 			<artifactId>hutool-core</artifactId>
 			<optional>true</optional>
@@ -28,6 +38,11 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
 			<optional>true</optional>
 		</dependency>
 
@@ -41,6 +56,11 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
 		</dependency>
 	</dependencies>
 
