--- a/pom.xml
+++ b/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>com.byaoh.cloud</groupId>
 		<artifactId>spring-cloud-alibaba-learning-parent</artifactId>
-		<version>0.0.29</version>
+		<version>0.0.30</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<packaging>jar</packaging>
 	<artifactId>spring-cloud-alibaba-learning-common</artifactId>
-	<version>0.0.04</version>
+	<version>0.0.05</version>
 
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
@@ -24,6 +24,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
