--- a/spring-cloud-alibaba-learning-starter/pom.xml
+++ b/spring-cloud-alibaba-learning-starter/pom.xml
@@ -61,5 +61,10 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 	</dependencies>
 </project>
